fixd alignment issues in contact.css

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -65,6 +65,10 @@
 }
 
 @media screen and (max-width: 600px) {
+
+    .contact {
+        margin: 0 auto;
+    }
     .contact #contactdes {
         font-size: 1.2rem;
     }
